--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <input tabindex="1" autofocus id="formFirstName" type="text" name="formFirstName" placeholder="First name" required />
         </div>
         <div>
-          <label for="formLastName">First name:</label>
+          <label for="formLastName">Last name:</label>
           <input tabindex="2" id="formLastName" type="text" name="formLastName" placeholder="Last name" required />
         </div>
         <div>
